# GeMSE_efficiency_simulation

./: CMakeLists.txt  G4OpenGL_0.eps  G4OpenGL_1.eps  GNUmakefile  GeMSE_efficiency.cc  README.md  meteorite_materials.txt  run.sh  vis.mac  worldVolume.txt
example_geometries/: test_sample_geometry.txt
include/: HPGeAnalysis.hh  HPGeDetectorConstruction.hh  HPGeHit.hh  HPGePhysListParticles.hh  HPGePhysicsList.hh  HPGePrimaryGeneratorAction.hh  HPGeRunAction.hh  HPGeRunMessenger.hh  HPGeSD.hh  HPGeTrackingAction.hh  HPGeTrackingMessenger.hh  MuonHit.hh  MuonSD.hh
inputfiles/: Bi210beta_spectrum.txt  Bi210brems_spectrum.txt  energy_spectrum.c  energy_spectrum.root  zenith_angle.c  zenith_angle.root
macros/: 1001keV.mac  2615keV_gammas_at_gap.mac  63keV.mac  93keV.mac  Ac228.mac  Al26.mac  Am241.mac  Am241_gammas.mac  Ba133.mac  Bi212.mac  Bi214.mac  CBSS2.mac  CBSS2_primaries.mac  Co60.mac  Coldfinger_cryostat.mac  Cs137.mac  DetHolder_cryostat.mac  DetHsg_cryostat.mac  Ge_crystal.mac  K40.mac  Mn54.mac  Na22.mac  Pb212.mac  Pb214.mac  SampleCavity_Rn222.mac  Sb125.mac  Sc44.mac  Ti44.mac  Tl208.mac  VdA_lab_Rn222.mac  all_sources.mac  copper_lid.mac  copper_shielding.mac  cosmogenics_BR.mac  innerPb_shielding.mac  innerPb_shielding_beta.mac  innerPb_shielding_beta_test.mac  innerPb_shielding_lid_beta.mac  standard_isotopes.mac  standard_isotopes_lowstat.mac  (+2 more)
results/: results_run0.root  results_run1.root  results_run2.root  results_run3.root  results_run4.root
src/: HPGeAnalysis.cc  HPGeAnalysis.cc~  HPGeDetectorConstruction.cc  HPGeDetectorConstruction.cc.bckup  HPGeDetectorConstruction.cc.empty  HPGeHit.cc  HPGePhysListParticles.cc  HPGePhysicsList.cc  HPGePhysicsList.cc.only_raddecay  HPGePrimaryGeneratorAction.cc  HPGeRunAction.cc  HPGeRunAction.cc~  HPGeRunMessenger.cc  HPGeSD.cc  HPGeTrackingAction.cc  HPGeTrackingMessenger.cc  MuonHit.cc  MuonSD.cc
